--- a/index.css
+++ b/index.css
@@ -67,6 +67,8 @@ body {
   font-weight: var(--font-medium);
   color: var(--dark-color);
   line-height: 1.6;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 h1,
