--- a/index.css
+++ b/index.css
@@ -137,7 +137,7 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: var(--dark-color-lighten);
+  background-color: var(--white-color);
 }
 
 /*===== NAV =====*/
@@ -193,7 +193,9 @@ img {
   background-color: var(--dark-color);
   border-radius: 50%;
 }
-
+body{
+  background-color: #FFE7FF;
+}
 /*Change color header*/
 
 .scroll-header {
@@ -203,7 +205,7 @@ img {
 
 /*===== HOME =====*/
 .home {
-  background-color: var(--dark-color-lighten);
+  background-color: var(--white-color);
   overflow: hidden;
 }
 
@@ -293,7 +295,7 @@ img {
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-  background-color: var(--dark-color-lighten);
+  background-color: var(--white-color);
   border-radius: 0.5rem;
   transition: 0.3s;
 }
@@ -364,7 +366,7 @@ img {
   position: relative;
   display: flex;
   height: 328px;
-  background-color: var(--dark-color-lighten);
+  background-color: var(--white-color);
   padding: 2rem;
   border-radius: 0.5rem;
   transition: 0.3s;
@@ -399,7 +401,7 @@ img {
     margin: auto;
   grid-template-columns: 55% 45%;
   column-gap: 0;
-  background-color: var(--dark-color-lighten);
+  background-color: var(--white-color);
   border-radius: 0.5rem;
   justify-content: center;
 }
@@ -431,7 +433,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: var(--dark-color-lighten);
+  background-color: var(--white-color);
   border-radius: 0.5rem;
   padding: 2rem;
 }
@@ -460,7 +462,7 @@ img {
 .new__sneaker-card {
   position: relative;
   padding: 3.5rem 1.5rem;
-  background-color: var(--dark-color-lighten);
+  background-color: var(--white-color);
   border-radius: 0.5rem;
   overflow: hidden;
   display: flex;
@@ -615,4 +617,6 @@ img {
     right: 0;
     left: -3rem;
   }
+
+  
 }
