added all the pages

--- a/index.css
+++ b/index.css
@@ -69,6 +69,11 @@ body {
   line-height: 1.6;
   max-width: 100%;
   overflow-x: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+body::-webkit-scrollbar {
+  display: none;
 }
 
 h1,
